debug/sass/main.scss
@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css";

.dahham-jumbotron-header {
  size: 100% 100%;
  background: whitesmoke no-repeat;
  background-size: 100% 100%;
  text-align: center;
}

.dahham-img-open-quotes {
  position: fixed 0 0;
  size: 15% 30%;
}

.dahham-img-close_quotes {
  position: relative;
  size: 20% 45%;
}

.dahham-project-header {
  text-align: center;
  text-justify: newspaper;
  font-size: 2.5em;
}

.dahham-promotional-apps {
  display: flex;
  flex-wrap: wrap;
}

.dahham-promotional-apps-description {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100ch;
  min-height: 15ch;
}

.dahham-header-link-text {
  color: rgb(120, 179, 179);
}

.dahham-header-link-text:hover {
  color: cadetblue;
}

.dahham-project-number-label {
  position: absolute;
  padding: 10px;
}

#dahham-projects {
  margin-top: 20px;
  margin-bottom: 10px;
}

ul#project-body>li>a {
  max-width: 200px;
  display: block;
  margin: auto;
}

a:hover {
  border-bottom-color: black;
}

@media screen and (min-width: 800px) {
  .dahham-jumbotron-header {
    background-image: url('/img/logo_background-large.png');
  }

  ul#project-body>li>a {
    margin: 0;
  }
}

@media screen and (min-width: 500px) {
  .dahham-jumbotron-header {
    background-image: url('/img/logo_background-medium.png');
  }
}

@media screen and (max-width: 550px) {
  .dahham-promotional-apps-description {
    min-height: 0;
  }
}

@media screen and (max-width: 499px) {
  .dahham-jumbotron-header {
    background-image: url('/img/logo_background-small.png');
  }

  ul#project-body>li>a {
    display: block;
    margin: auto;
    max-width: 100%;
  }
}

